# xgen_doc2chunk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Process Logic.md  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: publish.yml
xgen_doc2chunk/: __init__.py
xgen_doc2chunk/chunking/: __init__.py  chunking.py  constants.py  page_chunker.py  protected_regions.py  sheet_processor.py  table_chunker.py  table_parser.py  text_chunker.py
xgen_doc2chunk/core/: __init__.py  document_processor.py
xgen_doc2chunk/core/functions/: __init__.py  chart_extractor.py  chart_processor.py  file_converter.py  img_processor.py  metadata_extractor.py  page_tag_processor.py  preprocessor.py  storage_backend.py  table_extractor.py  table_processor.py  utils.py
xgen_doc2chunk/core/processor/: __init__.py  base_handler.py  csv_handler.py  doc_handler.py  docx_handler.py  excel_handler.py  html_reprocessor.py  hwp_handler.py  hwpx_handler.py  image_file_handler.py  pdf_handler.py  ppt_handler.py  rtf_handler.py  text_handler.py
xgen_doc2chunk/core/processor/csv_helper/: __init__.py  csv_constants.py  csv_encoding.py  csv_file_converter.py  csv_image_processor.py  csv_metadata.py  csv_parser.py  csv_preprocessor.py  csv_table.py
xgen_doc2chunk/core/processor/doc_helpers/: __init__.py  doc_file_converter.py  doc_image_processor.py  doc_preprocessor.py
xgen_doc2chunk/core/processor/docx_helper/: __init__.py  docx_chart_extractor.py  docx_constants.py  docx_file_converter.py  docx_image.py  docx_image_processor.py  docx_metadata.py  docx_paragraph.py  docx_preprocessor.py  docx_table_extractor.py  docx_table_processor.py
xgen_doc2chunk/core/processor/excel_helper/: __init__.py  excel_chart_extractor.py  excel_file_converter.py  excel_image_processor_xls.py  excel_image_processor_xlsx.py  excel_layout_detector.py  excel_metadata.py  excel_preprocessor.py  excel_table_xls.py  excel_table_xlsx.py  excel_textbox.py  excel_textbox_xls.py  excel_textbox_xlsx.py
xgen_doc2chunk/core/processor/html_helper/: __init__.py  html_file_converter.py  html_preprocessor.py
xgen_doc2chunk/core/processor/hwp_helper/: __init__.py  hwp_chart_extractor.py  hwp_constants.py  hwp_decoder.py  hwp_docinfo.py  hwp_file_converter.py  hwp_image_processor.py  hwp_metadata.py  hwp_preprocessor.py  hwp_record.py  hwp_recovery.py  hwp_table.py
xgen_doc2chunk/core/processor/hwpx_helper/: __init__.py  hwpx_chart_extractor.py  hwpx_constants.py  hwpx_file_converter.py  hwpx_image_processor.py  hwpx_metadata.py  hwpx_preprocessor.py  hwpx_section.py  hwpx_table_extractor.py  hwpx_table_processor.py
xgen_doc2chunk/ocr/: __init__.py  base.py  ocr_processor.py
xgen_doc2chunk/ocr/ocr_engine/: __init__.py  anthropic_ocr.py  bedrock_ocr.py  gemini_ocr.py  openai_ocr.py  vllm_ocr.py
(+51 files in other folders)
